--- a/ProjektDokumentation/sektioner/Design/Styringsenhed.tex
+++ b/ProjektDokumentation/sektioner/Design/Styringsenhed.tex
@@ -2,5 +2,5 @@
 
 \chapter{Design af Styringsenhed}
 
-Styringsenheden er den del der skal sørge for at modtage data fra Måleenhederne og ud fra disse data styre trinskifteren. Til at koordinere kommunikation fra flere Målenheder til et Kontrolmodul er brugt en Arduino. Samtidig skal den informere en bruger om systemets tilstand gennem en burgergrænseflade. Her er anvendt en HMI. Kontrolmodulet er lavet på en PLC, der står for at opdatere trinskifteren og HMI ud fra de modtagede data.
+Styringsenheden er den del der skal sørge for at modtage data fra Måleenhederne og ud fra disse data styre trinskifteren. Til at koordinere kommunikation fra flere Målenheder til et Kontrolmodul er brugt en Arduino. Samtidig skal den informere en bruger om systemets tilstand gennem en brugergrænseflade. Her er anvendt en HMI. Kontrolmodulet er lavet på en PLC, der står for at opdatere trinskifteren og HMI ud fra de modtagende data.
 
