--- a/ProjektDokumentation/sektioner/Design/Styringsenhed/Modultest.tex
+++ b/ProjektDokumentation/sektioner/Design/Styringsenhed/Modultest.tex
@@ -69,7 +69,7 @@
 	\begin{tabular}{ | m{0.2\textwidth} | m{0.8\textwidth}|} 
 		\hline
 		\textbf{Test}					&PLC udgangene til relæer leverer 24V, som skal til for at relæerne slår. \\ \hline
-		\textbf{Testbeskrivelse}		&Rælerne der bruges til at styre hvilket transformertrin der benyttes skal have 24V for at slår. Derfor testes det at udgangene også giver 24V.\\ \hline
+		\textbf{Testbeskrivelse}		&Rælerne der bruges til at styre hvilket transformertrin der benyttes skal have 24V for at trække. Derfor testes det at udgangene også giver 24V.\\ \hline
 		\textbf{Input}					& \\ \hline
 		\textbf{Forventet output}		&Det forventes at der kan måles 24V med et multimeter.\\ \hline
 		\textbf{Resultat}				&Spænding målte på PLC udgang: 24.07 V, 23,97 V, 24.08 V   \\ \hline
