--- a/ProjektDokumentation/sektioner/Maale/THD.tex
+++ b/ProjektDokumentation/sektioner/Maale/THD.tex
@@ -28,8 +28,7 @@ Udregningen af THD i Måleenheden er testet ved at sammenligne med resultatet me
 
 
 \lstset{caption={Beregning af THD for firkantsignal i Matlab},label={list:THDMatlab},
-			language=Matlab,
-			frame=single}
+			language=Matlab}
 \begin{lstlisting}[language=Matlab] 
 freq = 50;
 
