--- a/ProjektDokumentation/sektioner/Problemformulering.tex
+++ b/ProjektDokumentation/sektioner/Problemformulering.tex
@@ -1,5 +1,7 @@
 % !TEX root = ../prj4projektdokumentation.tex
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
 
-\chapter{Problemformulering}
-Når belastningerne i et transmissionssystem ændres, vil spændingsniveauet variere. Det er vigtigt, at spændingsniveauet holdes stabilt. Hvordan sikres dette?
+\chapter{Introduktion}
+
+\section{Problemformulering}
+Når belastningerne i et distributionssystem ændres, vil spændingsniveauet variere. Det er vigtigt, at spændingsniveauet holdes stabilt. Hvordan sikres dette?
