--- a/ProjektDokumentation/sektioner/kravspecifikation/FunktionelleKrav.tex
+++ b/ProjektDokumentation/sektioner/kravspecifikation/FunktionelleKrav.tex
@@ -17,16 +17,16 @@ Når spændingsregulatoren er i automatisk mode, kontrolleres spænding ved forb
 
 \subsection{Usecase Diagram}
 
-\begin{figure}[htbp] % (alternativt [H])
+\begin{figure}[H] % (alternativt [H])
 	\centering
 	\includegraphics[width=0.5\textwidth]{Figure/UsecaseDiagram}
 	\caption{Usecase Diagram}
 	\label{fig:UsecaseDiagram}
 \end{figure}
-Systemet indholder 3 usecases, der alle er initieret af brugeren. Den automatiske del af systemet er beskrevet i afsnit \ref{Afsnit: Automatisk mode}.
+Systemet indholder tre usecases, der alle er initieret af brugeren. Den automatiske del af systemet er beskrevet i afsnit \ref{Afsnit: Automatisk mode}.
 
 \subsection{Aktør Beskrivelse}
-\textbf{Brugeren} er den primær aktør. En sikkerhedsgodkendt operatør der kan betjene trintransformeren manuelt.
+\textbf{Brugeren} er den primær aktør. En sikkerhedsgodkendt operatør der kan betjene systemet.
 
 \subsection{Usecase 1 - Start manuel styring}
 \begin{table}[H]
@@ -52,9 +52,9 @@ Systemet indholder 3 usecases, der alle er initieret af brugeren. Den automatisk
 			\bfseries{Hovedscenariet:} 	& \\
 			
 			
-			1 	& Brugeren trykker "Manuel styring" på skærmen.\\
-			2	& Systemet skifter til "Manuel mode" \\
-			3 	& Systemet viser mulige spændingsniveauer på skærmen. 	\\
+			1 	& Brugeren trykker Manuel styring på skærmen.\\
+			2	& Systemet skifter til Manuel mode. \\
+			3 	& Systemet aktivere manuel skærm. 	\\
 			
 			\bottomrule
 			
@@ -89,9 +89,9 @@ Systemet indholder 3 usecases, der alle er initieret af brugeren. Den automatisk
 			\bfseries{Hovedscenariet:} 	& \\
 			
 			
-			1 	& Brugeren trykker "Autmatisk styring" på skærmen.\\
-			2 	& Systemet skifter til automatisk mode.\\
-			3 	& Systemet viser mulige spændingsniveauer på skærmen. 	\\		
+			1 	& Brugeren trykker Automatisk styring på skærmen.\\
+			2 	& Systemet skifter til Automatisk mode.\\
+			3 	& Systemet aktivere automatisk skærm. 	\\		
 				
 			
 			\bottomrule
