--- a/ProjektDokumentation/sektioner/kravspecifikation/IkkeFunktionelleKrav.tex
+++ b/ProjektDokumentation/sektioner/kravspecifikation/IkkeFunktionelleKrav.tex
@@ -8,12 +8,12 @@
 	\item Maks belastning af spændingsregulatoren er 20VA
 	\item Nominel spænding på primær siden er 24VAC
 	\item Nominel spænding på sekundær siden er 4VAC
-	\item Maks strøm på sekundær siden er 5A	
+	\item Skal minimum kunne levere 500mA	
 \end{enumerate}
 
 \subsection{Belastning}
 \begin{enumerate}
-	\item Modstandsværdi på 43 $\Omega$ giver spændingsfald på 10\%, når spændingen fra regulatoren er 4V. Den givne modstand indsættes som belastning, og spændingen herover måles.
+	\item Modstandsværdi på 54$\Omega$ giver spændingsfald på 10\%, når spændingen fra regulatoren er 4V.
 \end{enumerate}
 
 \subsection{Måleenhed}
@@ -21,11 +21,11 @@
 Kravene til målingerne i Måleenheden, er opgivet i en procent, da det ikke er relevant for vores "proof of concept"\  at gå dybere ned i målenøjagtighed og præcision. 
 \begin{enumerate}
 	\item Måle spændingen ved trinskifteren og forbrugerne mellem 0 og 8 Vrms
-	\item Måle spændingen med en præcision på $\pm$ 10\%
+	\item Måle spændingen med en præcision på $\pm$ 5\%
 	\item Måle strømmen ved trinskifteren og forbrugerne mellem 0 og 500mA
-	\item Måle strømmen med en præcision på $\pm$ 10\%
-	\item Måle og beregne power factor med en præcision på $\pm$ 10$\%$
-	\item Beregne THD med en præcision på $\pm$ 10$\%$
+	\item Måle strømmen med en præcision på $\pm$ 5\%
+	\item Måle og beregne power factor med en præcision på $\pm$ 5$\%$
+	\item Beregne THD med en præcision på $\pm$ 5$\%$
 \end{enumerate}
 
 
