--- a/ProjektDokumentation/sektioner/kravspecifikation/Systembeskrivelse.tex
+++ b/ProjektDokumentation/sektioner/kravspecifikation/Systembeskrivelse.tex
@@ -7,7 +7,7 @@ Systemet, der udvikles, har til opgave at regulere spændingsniveauet på en dis
 I dette projekt er det ikke muligt at realisere, derfor udvikles et produkt, der kan simulere scenariet. Det simuleres ved at skalere spændingsniveauet fra standardniveauet på 230V ned til 4V på distributionssiden. Dette gør det muligt at arbejde med en 8-trins transformer med specifikationen 24V/8-0V.\\
 I prototypen udvikles en impedans til simulering af en distributionslinje med en længde svarende til en typisk distributionslinje.\\
 På distributionslinjen tilsluttes et antal belastninger, der skal illustrere husstande. Disse er designes således, at skalering passer med resten af systemet. Dette er rammen systemet skal arbejde indenfor. \\
-En enkelt type måleenhed fremstilles, som placeres centralt ved hver belastning. Disse måleenheder kan måle spænding, strøm, faseforskydning, frekvenser og harmoniske.  Systemets frekvens er 50Hz ligesom frekvensen på det danske elnet.\\
+En enkelt type måleenhed fremstilles, som placeres centralt ved hver belastning. Disse måleenheder kan måle spænding, strøm, power faktor og harmoniske.  Systemets frekvens er 50Hz ligesom frekvensen på det danske elnet.\\
 Data fra måleenhederne samles i en styringsenhed, der har til opgave at regulere spændingsniveauet, så det altid ligger på 4V $\pm$ 10$\%$ på distributionssiden ved at skifte trin på transformeren. Dette står trinskifteren for.\\
 På styringsenheden er det muligt at observere de målte værdier på en touchskærm. Ved manuel styring er det på samme touchskærm, hvor der kan skiftes trin på transformeren.\\
 Systemet er en simulering af et produkt, der kan løse problemet. Den overordnede struktur er tænkt sådan, at den kan skaleres op.\\
