--- a/ProjektDokumentation/sektioner/kravspecifikation/MoSCoW.tex
+++ b/ProjektDokumentation/sektioner/kravspecifikation/MoSCoW.tex
@@ -5,11 +5,10 @@
 
 \begin{itemize}
 \item{Systemet \textbf{skal} bestå af en trinskifter 24/0-8V}
-\item{Systemet \textbf{skal} måle spænding, strøm og power factor centralt og decentralt}
+\item{Systemet \textbf{skal} måle spænding, strøm, power factor og harmoniske centralt og decentralt}
 \item{Systemet \textbf{skal} vise data på en skærm}
 \item{Systemet \textbf{skal} simulere en distributionslinje og flere forbrugere}
 \item{Systemet \textbf{skal} kunne reguleres manuelt}
-\item{Systemet \textbf{skal} måle harmoniske}
 \item{Systemet \textbf{burde} kunne reguleres automatisk}
 \item{Systemet \textbf{kunne} have en log}
 \item{Distributionslinjen \textbf{kunne} indeholde en decentral producent}
