--- a/ProjektDokumentation/sektioner/Design/Kommunikationsprotokoller.tex
+++ b/ProjektDokumentation/sektioner/Design/Kommunikationsprotokoller.tex
@@ -5,15 +5,17 @@
 
 \section{TCP protokol}
 \label{sec:TCPprotokol}
-Mellem kommunikationsmodulet og kontrolmodulet er anvendt en TCP protokol. TCP er valgt, da systemet ikke kræver hurtig, men derimod en meget pålidelig datatransmission. PLC'en anvender stikstandarden RJ-45 og har mulighed for at kommunikere med hastighederne 10/100 Mb/s. Her anvendes .....
+Mellem kommunikationsmodulet og kontrolmodulet er anvendt en TCP protokol. TCP er valgt, da systemet ikke kræver hurtig, men derimod en meget pålidelig datatransmission. PLC'en anvender stikstandarden RJ-45 og har mulighed for at kommunikere med hastighederne 10/100 Mb/s. Komponenterne i systemet tillader 100 Mb/s.
 PLC'en er opsat som client, der forespørger data fra Arduinoen, som svarer med det forespurgte data. Kommunikation over TCP forbindelsen anvender protokollen vist på figur \ref{fig:TCPprotokol}.
 
 \begin{figure}[H] % (alternativt [H])
 	\centering
-	\includegraphics[width=\textwidth]{Figure/UARTprotokol}
+	\includegraphics[width=0.7\textwidth]{Figure/TCPprotokol}
 	\caption{Protokol for kommunikation mellem kommunikationsmodul og kontrolmodul}
 	\label{fig:TCPprotokol}
 \end{figure}
+
+Måledata består af otte bytes i sæt af to bytes. De fire sæt dækker over måleværdier for henholdsvis, strøm, spænding, powerfactor og THD. Yderligere information om TCP kommunikationen kan findes i afsnit \ref{sec:TCPkommunikation} TCP kommunikation og \ref{sec:Kommunikationsmodul} Kommunikationsmodul.
 
 \section{UART protokol}
 \label{sec:UARTprotokol}
