--- a/ProjektDokumentation/prj4projektdokumentation.tex
+++ b/ProjektDokumentation/prj4projektdokumentation.tex
@@ -194,6 +194,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/Design/Styringsenhed/Modultest}
 \input{sektioner/Integrationstest/MaalTilPlc}
 \input{sektioner/Integrationstest/NetTilMaal}
+\input{sektioner/Accepttest/Accepttest}
 \input{sektioner/Metode/Metode}
 \printbibliography
 
