--- a/ProjektDokumentation/sektioner/kravspecifikation/IkkeFunktionelleKrav.tex
+++ b/ProjektDokumentation/sektioner/kravspecifikation/IkkeFunktionelleKrav.tex
@@ -7,7 +7,7 @@
 \begin{enumerate}
 	\item Maks belastning af spændingsregulatoren er 20VA
 	\item Nominel spænding på primær siden er 24VAC
-	\item Nominel spænding på sekundær siden er 4VAC
+	\item Nominel spænding på sekundær siden er 4 , 5 eller 6 afhængigt af trin VAC
 	\item Skal minimum kunne levere 500mA	
 \end{enumerate}
 
