--- a/ProjektDokumentation/sektioner/Accepttestspecifikation/FunktionelleKrav.tex
+++ b/ProjektDokumentation/sektioner/Accepttestspecifikation/FunktionelleKrav.tex
@@ -7,7 +7,7 @@
 	\begin{tabular}{|p{2cm}|p{3cm}|p{4cm}|p{4.5cm}|p{1cm}|}
 		\hline
 		\textbf{UC1} & \textbf{Handling} & \textbf{Forventet resultat} & \textbf{Resultat} &\textbf{OK} \\\hline
-		Start manuel styring & Bruger vælger Manuel Mode & På skærmen vises Manuel Mode med mulighed for valg af trin & Skærmen viser Manuel Mode & \checkmark \\\hline
+		Start manuel styring & Bruger vælger Manuel Mode & På skærmen vises Manuel Mode med mulighed for valg af trin &  &  \\\hline
 		
 		
 	\end{tabular}
@@ -21,7 +21,7 @@
 	\begin{tabular}{|p{2cm}|p{3cm}|p{4cm}|p{4.5cm}|p{1cm}|}
 		\hline
 		\textbf{UC2} & \textbf{Handling} & \textbf{Forventet resultat} & \textbf{Resultat} &\textbf{OK} \\\hline
-		Stop manuel styring & Bruger vælger Automatisk Mode & Skærmen viser Automatisk Mode, hvor trinknapperne er deaktiverede & Der vises Automatisk Mode & \checkmark \\\hline
+		Stop manuel styring & Bruger vælger Automatisk Mode & Skærmen viser Automatisk Mode, hvor trinknapperne er deaktiverede & &  \\\hline
 		
 		
 	\end{tabular}
@@ -33,7 +33,7 @@
 	\begin{tabular}{|p{2cm}|p{3cm}|p{4cm}|p{4.5cm}|p{1cm}|}
 		\hline
 		\textbf{UC3a} & \textbf{Handling} & \textbf{Forventet resultat} & \textbf{Resultat} &\textbf{OK} \\\hline
-		Skift trin op & Systemet er i Manuel Mode. Bruger vælger Trin Op på skærmen & Systemet skifter trin op på transformeren og skærmen opdateres med nye værdier. & Transformeren skifter trin efter 2s. Derefter opdateres spænding, strøm, pf og THD på skærmen inden 2s.  & \checkmark \\\hline
+		Skift trin op & Systemet er i Manuel Mode. Bruger vælger Trin Op på skærmen & Systemet skifter trin op på transformeren og skærmen opdateres med nye værdier. &   & \\\hline
 		
 		
 	\end{tabular}
@@ -45,7 +45,7 @@
 	\begin{tabular}{|p{2cm}|p{3cm}|p{4cm}|p{4.5cm}|p{1cm}|}
 		\hline
 		\textbf{UC3b} & \textbf{Handling} & \textbf{Forventet resultat} & \textbf{Resultat} &\textbf{OK} \\\hline
-		Skift trin ned & Systemet er i Manuel Mode. Bruger vælger Trin Ned på skærmen & Systemet skifter trin ned på transformeren og skærmen opdateres med nye værdier. & Transformeren skifter trin efter 2s. Derefter opdateres spænding, strøm, pf og THD på skærmen inden 2s.  & \checkmark \\\hline
+		Skift trin ned & Systemet er i Manuel Mode. Bruger vælger Trin Ned på skærmen & Systemet skifter trin ned på transformeren og skærmen opdateres med nye værdier. &  & \\\hline
 		
 		
 	\end{tabular}
