Brugergrænseflade afsnit done

--- a/ProjektDokumentation/sektioner/Arkitektur/BrugerGraenseFlade.tex
+++ b/ProjektDokumentation/sektioner/Arkitektur/BrugerGraenseFlade.tex
@@ -2,7 +2,8 @@
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
 
 \section{Brugergrænseflade}
-(Beskrivelse af skærm på PLC’en) \\
+Brugergrænsefladerne der ses på figur \ref{fig:HMIAutomatikMode} og \ref{fig:HMIManuelMode} er udkast designet tidligt i processen før noget funktionalitet blev udviklet. Det er altså dem der er blevet brugt som udgangspunkt for det videre design. Det endelige design af brugergrænsefladerne kan ses i afsnit \ref{sec:HMI} Brugergrænseflade under Design.
+
 \subsection{Automatisk mode}
 \begin{figure}[H] % (alternativt [H])
 	\centering
@@ -10,7 +11,6 @@
 	\caption{HMI Automatisk mode}
 	\label{fig:HMIAutomatikMode}
 \end{figure}
-
 
 
 \subsection{Manuel mode}
