--- a/ProjektDokumentation/sektioner/Design/Kommunikationsprotokoller.tex
+++ b/ProjektDokumentation/sektioner/Design/Kommunikationsprotokoller.tex
@@ -15,7 +15,7 @@ PLC'en er opsat som client, der forespørger data fra Arduinoen, som svarer med 
 	\label{fig:TCPprotokol}
 \end{figure}
 
-Måledata består af otte bytes i sæt af to bytes. De fire sæt dækker over måleværdier for henholdsvis, strøm, spænding, powerfactor og THD. Yderligere information om TCP kommunikationen kan findes i afsnit \ref{sec:TCPkommunikation} TCP kommunikation og \ref{sec:Kommunikationsmodul} Kommunikationsmodul.
+Måledata består af otte bytes i sæt af to bytes. De fire sæt dækker over måleværdier for henholdsvis, strøm, spænding, THD og powerfactor. Yderligere information om TCP kommunikationen kan findes i afsnit \ref{sec:TCPkommunikation} TCP kommunikation og \ref{sec:Kommunikationsmodul} Kommunikationsmodul.
 
 \section{UART protokol}
 \label{sec:UARTprotokol}
