--- a/ProjektDokumentation/sektioner/Accepttestspecifikation/IkkeFunktionelleKrav.tex
+++ b/ProjektDokumentation/sektioner/Accepttestspecifikation/IkkeFunktionelleKrav.tex
@@ -8,7 +8,7 @@
 		\textbf{Trintransformer} & \textbf{Handling} & \textbf{Forventet resultat} & \textbf{Resultat} &\textbf{OK} \\\hline
 		Nominel spænding på primærsiden er 24VAC & Spændingen på primærsiden måles. & Den målte værdi er 24VAC. &  &  \\\hline
 		Nominel spænding på sekundær side er 4, 5 eller 6 VAC afhængig af trin & Spændingen på sekundærsiden måles for hhv. trin 4, 5 og 6. & De målte værdier er 4, 5 og 6V &  & \\\hline
-		Skal minimum kunne levere 500mA	. & Strømmen på sekundærsiden måles. & Transformerne kan levere over 500mA &   & \\\hline
+		Skal minimum kunne levere 500mA	. & Strømmen på sekundærsiden måles. & Transformeren kan levere over 500mA &   & \\\hline
 	\end{tabular}
 	
 \end{table} 
