--- a/ProjektDokumentation/sektioner/foranalyse.tex
+++ b/ProjektDokumentation/sektioner/foranalyse.tex
@@ -7,7 +7,7 @@
 Projektgruppens vejleder udleverede to transformere. Den ene er der ingen mærkeplade og ledningerne er alle samme farve. Den anden har mærkeplade og forskellige farvet ledninger. De to transformere blev begge undersøgt i laboratoriet, med en 18VAC på primærside, derefter måltes spændingen på de forskellige trin. Transformeren uden mærkeplade hoppede små skridt fra ca 3 - 4.5V, hvor transformeren med mærkeplade havde skridt på 1 V fra 0 til 8V. Gruppen blev enige om at det var ligegyldigt om det var små eller store skridt transformeren hoppede, bare protypen blev lavet så den passede til transformeren. Det blev derfor besluttet at anvende transformeren med mærkeplade og forskellige farvet ledninger. 
 
 \section{Valg af styringsenhed}
-Det er besluttet at lave Styringsenheden på en PLC, dette gøres for at realisere, hvordan det ville laves i virkeligheden. Alternativt kunne det laves på en PSOC eller Arduino, men da der på dette semester er undervisning i PLC styring virker det derfor oplagt.
+Det er besluttet at lave Styringsenhedens kontroldel på en Programmable Logic Controller (PLC), dette gøres for at realisere, hvordan det ville laves i virkeligheden. Alternativt kunne det laves på en PSOC eller Arduino, men da der på dette semester er undervisning i PLC styring virker det derfor oplagt. I samme fag undervises også i Human Machine Interface (HMI), så det var oplagt at anvende til brugergrænsefladen. Selve kommunikationsdelen har krævet flere overvejelser, hvor både en PSoC og en Arduino har været ind i billedet. Dette skulle at PLC'en kun har et frit RJ-45 stik, som der var brug for en form for switch for at kunne tilslutte flere måleenheder. Valget faldt i første omgang på en PSoC med tilhørende Ethernet shield, da PSoC blev brugt til måleenheden. Undervvejs blev skiftet over til en Arduino, fordi den er nemmere at arbejde med indenfor Ethernet kommunikation.
 
 \section{Overvejelser omkring måleenhederne}
 Det var først tænkt at der kunne laves eller købes nogle sensorer som skulle tilsluttes PLC'en. PLC'en kan dog ikke måle hurtigt nok på AC forbindelser til at få et reelt billede af signalet. Så det kan undersøges for harmoniske svingninger. Ved at sample et signal på en PSOC, med en hurtigere samplefrekvens, kan der udregnes fourier. Fourier kan anvendes til at udregne størrelsen på et signal ved bestemte frekvenser, og derved kan systemet undersøges for harmoniske. Der findes en måde til at angive hvor stort et indhold af harmoniske, der er i et forsyningssystem, som kaldes Total Harmonic Distortion (THD). Dette er et tal i procent, som angiver hvor stort indholdet af harmoniske er. Da beregningen af dette er forholdsvis simpelt, vil denne metode blive brugt til at analyserer systemets indhold af harmoniske. 
