--- a/ProjektDokumentation/bibfil.bib
+++ b/ProjektDokumentation/bibfil.bib
@@ -46,6 +46,14 @@ For at referencerne opdaterer sig skal der compiles, køres "Bibtex 8-bit" komma
 	
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Arkitektur %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Design disblinje %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+@Book{DisbTeori,
+  author = {J. Glover et al.},
+  title  = {Power System Analysis & Design},
+  year   = {2016},
+ 
+}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Design af Måleenhed %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %Links - URLdate er den dato hvor linket er SET af os. Date-Modified er den dato linket er modificeret på nettet (hvis det fremgår)
