Tilføjet enheder og linjeværdier i powerfactor afsnit

--- a/ProjektDokumentation/sektioner/Design/Belastning.tex
+++ b/ProjektDokumentation/sektioner/Design/Belastning.tex
@@ -87,27 +87,27 @@ På baggrund af dette kan den aktuelle power factor med de valgte kabelparametre
 \begin{align}
 Z_R=54 \Omega
 \end{align}
-
 \begin{align}
-Z_D=6,2+4,27j
+R_L=6,2\Omega
 \end{align}
-
 \begin{align}
-Z_L=Z_R+Z_D=60,2+4,27j
+X_L=2*\pi*50Hz*13,6mH=4,27\Omega
 \end{align}
-
 \begin{align}
-I=\frac{4}{\vert Z_L \vert} = 0,07 A
+Z_D=(6,2+4,27j)\Omega
 \end{align}
-
 \begin{align}
-S_L=I^2\cdot Z_L = 0,26+0,02j VA
+Z_L=Z_R+Z_D=(60,2+4,27j)\Omega
 \end{align}
-
+\begin{align}
+I=\frac{4V}{\vert Z_L \vert} = 0,07 A
+\end{align}
+\begin{align}
+S_L=I^2\cdot Z_L = (0,26+0,02j) VA
+\end{align}
 \begin{align}
 P=0,26 W
 \end{align}
-
 \begin{align}
 pf= \frac{P}{\vert S_L \vert} = 0,996
 \end{align}
