--- a/ProjektDokumentation/sektioner/Design/Belastning.tex
+++ b/ProjektDokumentation/sektioner/Design/Belastning.tex
@@ -73,7 +73,7 @@ Til implementering af belastninger/forbrugere er der på baggrund af foregående
 
 \section{Power factor}
 
-For yderligere monitorering ønskes det også at undersøge power factor i systemet. Når effekt transporteres gennem en distributionslinje består det af både aktiv og reaktiv effekt, og power factor fortæller ratioen mellem aktiv og tilsyneladende effekt. Denne parameter fortæller hvor meget effekt, der kan tages ud af systemet og udnyttes hos en belastning/forbruger. Da belastningerne i dette system er rent ohmske, forventes en power factor tæt på 1. Da der også er en spole på distributionslinjen forventes det dog også at der vil være en lagging power factor. Forholdet mellem aktiv, reaktiv og tilsyneladende effekt kan ses på figur \ref{fig:Effekttrekant}
+For yderligere monitorering ønskes det også at undersøge power factor i systemet. Når effekt transporteres gennem en distributionslinje består det af både aktiv og reaktiv effekt, og power factor fortæller ratioen mellem aktiv og tilsyneladende effekt. Denne parameter fortæller hvor meget effekt, der kan tages ud af systemet og udnyttes hos en belastning/forbruger. Da belastningerne i dette system er rent ohmske, og der kun er spolevirkning fra 'kablet, forventes der en power factor tæt på 1, men som vil være lagging netop pga, spolen. Forholdet mellem aktiv, reaktiv og tilsyneladende effekt kan ses på figur \ref{fig:Effekttrekant}
 
 \begin{figure}[H] 
 	\centering
